--- a/src/data/es.css
+++ b/src/data/es.css
@@ -54,17 +54,20 @@ body {
 .logo {
     font-family: 'Josefin Sans', sans-serif;
     text-transform: uppercase;
-    background: white;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;   
     font-size: 3em;
-    margin-top: -0.5em;
-    margin-bottom: 0.5em;
+    display: flex;
+    flex-direction: row;
+    align-content: baseline;
 }
 
-.logo h1 {
-    padding-top: 20px;
+.logo p {
     font-family: 'Josefin Sans', sans-serif;
+    color: #fefe00;
+}
+
+.logo img {
+    width: 50px;
+    height: 45px;
 }
 
 
