--- a/app/src/index.css
+++ b/app/src/index.css
@@ -73,8 +73,14 @@ button:focus-visible {
   max-width: 100%;
   max-height: 100vh;
 }
+
+.root-stack {
+  width: 100%;
+  height: 100%;
+}
+
 .nav {
-  margin-top: 20px;
+  padding-top: 20px;
   display: flex;
   position: sticky;
   top: 0;
@@ -99,7 +105,7 @@ button:focus-visible {
 }
 
 .nav-wrap a {
-  color: var(--accent);
+  color: var(--background);
 }
 
 .nav-wrap div {
@@ -108,6 +114,99 @@ button:focus-visible {
   margin: 0;
   padding: 0;
 }
+
+.root-stack {
+  padding-top: -20px;
+}
+
+.page-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  margin-top: -120px; 
+}
+ 
+
+/* login/regin */
+
+.log-form {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.form-reg-row {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+}
+
+.log-stack {
+  width: 100%;
+
+}
+
+.log-a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+  min-width: 40%;
+}
+
+
+.log-a input {
+  background-color: var(--text);
+  border: none;
+  width: 90%;
+  height: 50px;
+  border-radius: 25px;
+  color: var(--background);
+  padding: 0 20px;
+}
+
+.log-b {
+  width: 40%;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+  position: relative;
+  text-align: center;
+
+}
+
+.log-b img {
+  height: 80%;
+  width: 80%;
+}
+
+.log-b h2 {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
+
+
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
